2007-05-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (SearchSlaveDelegate.set_summary_label): 
	Add support for setting a summary label

2007-05-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (SearchFilter): Inherit from a widget and add a 
	filter-position child property. Add normal properties to the filter
	and the container. Add a common base class and remove a couple of
	methods from the interface

	* tests/test_ObjectList.py (ConstructorTest.testGObjectNew): 
	Add a test

	* kiwi/ui/objectlist.py (ObjectList.__init__): Make sure
	gobject.new works

	Fixes #3343

2007-05-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column): Turn attributes into a GObject 
	property.

	* kiwi/ui/search.py (ComboSearchFilter.__init__): Make values optional
	(SearchContainer.add_filter): Only add the executer columns if
	we have an executer set, don't require one.

2007-05-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/log.py (set_log_file): Return the file handlers stream,
	useful when the application want to use other means to write
	to the same file.

2007-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py:
	(SearchSlaveDelegate.disable_search_entry): Add a method to make it
	possible to disable the search entry.
	(DateSearchFilter.set_use_date_entries): New, to disable the
	user selectable date entries
	(DateSearchFilter.get_end_date, DateSearchFilter.get_start_date): New
	accessors
	(DateSearchFilter.select): Add a position argument
	(DateSearchFilter.clear_options): New
	(DateSearchFilter.add_option_fixed)
	(DateSearchFilter.add_option_fixed_interval): New,	
	added methods to make it possible to add fixed dates/interval

2007-05-04  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py:
	* tests/test_ObjectList.py:
	Objectlist does not set a radio column value to true if
	all values are false.
	Fixes #3339
