@@ -1,3 +1,10 @@
+2007-05-17  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py (_BaseDateTimeConverter.from_string): 
+	Disallow dates before 1900, since the strftime implementation
+	on Linux does not allow it.
+	Fixes #3363
+
 2007-05-15  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/search.py (SearchSlaveDelegate.set_summary_label): 
